# kgx

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  LICENSE  Loading.md  Makefile  README.md  arangodb.html  config.yml  data-preparation.html  data-preparation.md  developer-guide.html  developer-guide.md  environment.sh  examples.html  genindex.html  index.html  installation.html  kgx_biolink_validation.html  kgx_format.html  kgx_schema_generation.html  mapping_to_rdfstar.html  merged-kg_stats.yaml  neo4j_download.py  objects.inv  py-modindex.html  pyproject.toml  release-instructions.md  release_instructions.md  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  sparql_download.py  tox.ini  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-dependencies.yaml  deploy-docs.yaml  docs-test.yaml  publish_image_to_docker.yaml  pypi-release.yml  rebuild-schema.yml  run-tests.yml  run_tests.yml  run_tox.yml
_modules/: index.html
_modules/kgx/: curie_lookup_service.html  graph_operations.html  prefix_manager.html  transformer.html  validator.html
_sources/: arangodb.md.txt  developer-guide.md.txt  examples.md.txt  index.rst.txt  installation.md.txt  kgx_format.md.txt
_sources/reference/: curie_lookup_service.md.txt  graph.md.txt  index.md.txt  prefix_manager.md.txt  sink.md.txt  source.md.txt  trapi_source.md.txt  validator.md.txt
docs/: Makefile  README.md  arangodb.md  cli_usage.rst  command_line.rst  command_line_doc.md  command_line_examples.md  command_line_usage.md  conf.py  data-preparation.md  documentation.rst  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  kgx_biolink_validation.md  kgx_format.md  kgx_schema_generation.md  make.bat  mapping_to_rdfstar.md  operations.rst  sink.md  source.md  test.rst  transformation_and_validation_examples.md  transformer.md  transformers.rst  utilities.rst  validator.md  workflows.md
docs/cli/: cli_utils.md  index.md
docs/graph_operations/: clique_merge.md  fold_predicate.md  graph_merge.md  knowledge_map.md  remap_edge_property.md  remap_node_identifiers.md  remap_node_property.md  remove_singleton_nodes.md  summarize_graph.md  unfold_node_property.md
docs/reference/: curie_lookup_service.md  graph.md  index.md  prefix_manager.md  sink.md  source.md  transformer.md  trapi_sink.md  trapi_source.md  validator.md
docs/utilities/: graph_utils.md  index.md  kgx_utils.md  rdf_utils.md
examples/: README.md  biogrid-e.csv  biogrid-fake.json  biogrid-n.csv  sample-merge-config.yml  sample-transform-config.yml
examples/monarch-build-workflow/: Makefile  README.md  requirements.txt
examples/scripts/: convert_nt_to_tsv.py  load_csv_to_neo4j.py  load_tsv_to_neo4j.py  read_from_neo4j.py
kgx/: __init__.py  clique_merge.py  config.py  config.yml  csv_sink.py  curie_lookup_service.py  debug_sink.py  error_detection.py  file_sink.py  filter.py  json_transformer.py  kgx.py  kgx_pandas.py  logicterm_transformer.py  mapper.py  neo_source.py  neo_transformer.py  nx_transformer.py  pandas_transformer.py  prefix_manager.py  progress_sink.py  rdf_graph_mixin.py  rdf_transformer.py  rdf_transformer2.py  sink.py  source.py  sparql_source.py  sparql_transformer.py  stream.py  transformer.py  tsv_sink.py  validator.py
kgx/cli/: __init__.py  cli_utils.py  decorators.py  error_logging.py  translator_kgx.py  utils.py
kgx/graph/: base_graph.py  nx_graph.py
kgx/graph_operations/: __init__.py  clique_merge.py  graph_merge.py  knowledge_map.py  meta_knowledge_graph.py  summarize_graph.py
kgx/mapper/: sparql_mapper.py
kgx/operations/: clique_merge.py  graph_merge.py  knowledge_map.py  summarize_graph.py
kgx/parsers/: jelly_parser.py  ntriples_parser.py
kgx/schema/: kgx.yaml  kgx_complete.yaml
kgx/sink/: __init__.py  arango_sink.py  graph_sink.py  json_sink.py  jsonl_sink.py  neo_sink.py  null_sink.py  nx_graph_sink.py  parquet_sink.py  rdf_sink.py  sink.py  sql_sink.py  tab_sink.py  trapi_sink.py  tsv_sink.py
kgx/source/: SssomSource.py  __init__.py  arango_source.py  duckdb_source.py  graph_source.py  json_source.py  jsonl_source.py  neo_source.py  nx_graph_source.py  obograph_source.py  obojson_source.py  owl_source.py  rdf_source.py  source.py  sparql_source.py  sssom_source.py  trapi_source.py  tsv_source.py
kgx/stream/: stream.py
kgx/transformers/: configurable_transformer.py  json_transformer.py  jsonl_transformer.py  logicterm_transformer.py  neo_transformer.py  nt_transformer.py  nx_transformer.py  pandas_transformer.py  rdf_graph_mixin.py  rdf_transformer.py  rsa_transformer.py  sparql_transformer.py  sssom_transformer.py  transformer.py
kgx/utils/: __init__.py  biolinkmodel_toolkit.py  category_utils.py  graph_utils.py  infores.py  kgx_utils.py  kgx_utils.py.orig  model_utils.py  ontology.py  rdf_utils.py  str_utils.py
reference/: curie_lookup_service.html  graph.html  index.html  prefix_manager.html  sink.html  source.html  transformer.html  trapi_sink.html  trapi_source.html  validator.html
reference/cli/: cli_utils.html  index.html  kgx_cli.html
reference/graph_operations/: clique_merge.html  fold_predicate.html  graph_merge.html  index.html  meta_knowledge_graph.html  remap_edge_property.html  remap_node_identifiers.html  remap_node_property.html  remove_singleton_nodes.html  summarize_graph.html  unfold_node_property.html
reference/utilities/: graph_utils.html  index.html  kgx_utils.html  (+1 more)
specification/: kgx-format.md
tests/: .gitignore  __init__.py  test_cli.py  test_clique_merge_operation.py  test_csv.py  test_csv_sink.py  test_graph_merge.py  test_json.py  test_logicterms.py  test_mapping.py  test_neo_loader.py  test_neo_source.py  test_prefix.py  test_random.py  test_rdf.py  test_rdf_owl.py  test_rsa_format_json.py  test_sparql.py  test_validator.py  xray_validator.py
workflows/: 01 - Read From a Remote Knowledge Graph.ipynb  02 - Remap SemMedDB Node ID from UMLS to HGNC.ipynb  03 - Merge SemMedDB with Monarch-Lite.ipynb  04 - Merge RTX with Monarch-Lite.ipynb
(+216 files in other folders)
