[project]
name = "kgx"
dynamic = ["version"]
description = "A Python library and set of command line utilities for exchanging Knowledge Graphs (KGs) that conform to or are aligned to the Biolink Model."
authors = [
    {name = "Deepak Unni", email = "deepak.unni3@gmail.com"},
    {name = "Richard Bruskiewich", email = "richard.bruskiewich@delphinai.com"},
    {name = "Sierra Moxon", email = "smoxon@lbl.gov"},
]
requires-python = ">=3.10,<4"
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Click>=8.0,<8.2",
    "SPARQLWrapper>=1.8.2",
    "bmt>=1.4.6,<2.0.0",
    "cachetools>=5.0.0,<6.0.0",
    "deprecation>=2.1.0,<3.0.0",
    "docker>=7.0.0,<8.0.0",
    "docutils>=0.18.1",
    "duckdb>=1.0.0,<2.0.0",
    "exceptiongroup>=1.0.0,<2.0.0; python_version < '3.11'",
    "ijson>=3.1.3,<4.0.0",
    "inflection>=0.5.1,<1.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "jsonstreams>=0.6.0,<1.0.0",
    "linkml>=1.9.1,<2.0.0",
    "linkml-runtime>=1.9.1,<2.0.0",
    "linkml-map>=0.3.8,<1.0.0",
    "neo4j>=4.4.10",
    "python-arango>=7.0.0",
    "networkx",
    "ordered-set>=4.0.2,<5.0.0",
    "pandas>1.0.3",
    "prefixcommons>=0.1.4,<1.0.0",
    "prologterms>=0.0.6,<1.0.0",
    "python-dateutil>=2.8.1,<3.0.0",
    "pyyaml",
    "rdflib>=6.0.0",
    "pyjelly>=0.6.2,<1.0.0",
    "shexjsg",
    "stringcase>=1.2.0,<2.0.0",
    "terminaltables>=3.1.0,<4.0.0",
    "validators>=0.20.0,<1.0.0",
    "pyarrow>=18.0.0,<19.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "tox>=4.13.0,<5.0.0",
]
docs = [
    "furo>=2023.03.27",
    "sphinxcontrib-mermaid>=0.7.1",
    "sphinx>=5.3.0",
    "sphinx-click",
    "sphinx-rtd-theme",
    "myst-parser",
    "myst-nb",
    "matplotlib>=3.7",
    "sphinx-jinja>=2.0.2,<3.0.0",
    "sphinxcontrib-programoutput>=0.17,<1.0.0",
    "sphinx-design",
    "recommonmark==0.5.0",
]

[project.scripts]
kgx = "kgx.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"
